--- a/src/app/aaacesa/calculadora/calculadora.component.html
+++ b/src/app/aaacesa/calculadora/calculadora.component.html
@@ -64,13 +64,33 @@
                     <div class="input-full-width form-group form-check">                    
                       <label for="consolidado" class="form-check-label">Cadena Fría</label>
                         <label class="switch switch-pill switch-primary form-switch">                  
-                          <input id="consolidado" type="checkbox" class="switch-input" checked>
+                          <input id="cadena " type="checkbox" class="switch-input" checked>
                           <span class="switch-slider"></span>
                         </label>
                     </div>
+
+                    <mat-form-field *ngIf="frio" class="input-full-width" >
+                        <mat-select placeholder="Rango de temperatura">
+                            <mat-option>10°</mat-option>
+                            <mat-option>5°</mat-option>
+                            <mat-option>0°</mat-option>
+                            <mat-option>-5°</mat-option>
+                            <mat-option>-10°</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div *ngIf="frio" class="input-full-width form-group form-check">                    
+                        <label for="consolidado" class="form-check-label">Previo</label>
+                          <label class="switch switch-pill switch-primary form-switch">                  
+                            <input id="consolidado" type="checkbox" class="switch-input">
+                            <span class="switch-slider"></span>
+                          </label>
+                    </div>
+
+
                     <mat-checkbox matInput class="input-full-width">Términos y condiciones</mat-checkbox> 
     
-                    <button mat-raised-button class="btn btn-pill btn-primary">CALCULAR</button>
+                    <button class="btn btn-pill btn-primary">CALCULAR</button>
                   </div>
                 </div>
               </div>
@@ -93,6 +113,46 @@
           <div class="row">
               <div class="col-6">
                 Almacenaje
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Manejo por valor *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Maniobras *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Congelación *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Temperatura controlada *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Maniobras previo *
               </div>
               <div class="col-6">
                 <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
@@ -121,6 +181,30 @@
              <div class="col-6">
                 <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                Subtotal *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div class="col-6">
+                IVA *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
+          </div>
+          <div *ngIf="frio" class="row">
+              <div  class="col-6">
+                Total *
+              </div>
+              <div class="col-6">
+                <mat-form-field class="alined"><input matInput type="text" class="form-control"></mat-form-field>
+              </div>
           </div>
         </div>
       </div>
