--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="row justify-content-end" *ngIf="numCuentas && rolUser">
+  <!-- <div class="row justify-content-end" *ngIf="numCuentas && rolUser"> -->
+  <div class="row justify-content-end">
     <div class="col-lg-6 col-md-6 col-xs-6 text-right">
       <button (click)="crearUser()" class="btn btn-pill btn-ghost-primary"> <i class="fas fa-plus-circle"></i> Crear Usuario</button>
     </div>
