--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -204,25 +204,27 @@
                         <div class="row mb-1">
 
                           <!-- Start Left Inside -->
-                          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">                                                                            
-                            <!-- <div class="col-12 mb-4">
-                              <h6 class="modal-title">Detalle PreAlerta {{ detailData.IdPrealerta }}</h6>
-                            </div> -->
+                          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">
+                            <div class="row">
+                              <!-- <div class="col-12 mb-4">
+                                <h6 class="modal-title">Detalle PreAlerta {{ detailData.IdPrealerta }}</h6>
+                              </div> -->
 
-                            <div class="col-12">
-                              <h5 class="detail-text text-muted">Guia Master </h5>
-                              <p class="detail-text">{{detailData.Master}}</p>
-                            </div>
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-12">
+                                <h5 class="detail-text text-muted">Guia Master </h5>
+                                <p class="detail-text">{{detailData.Master}}</p>
+                              </div>
 
-                            <div class="col-12">
-                              <h5 class="detail-text text-muted">Guia House </h5>
-                              <p class="detail-text">{{detailData.House}}</p>
-                            </div>
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-12">
+                                <h5 class="detail-text text-muted">Guia House </h5>
+                                <p class="detail-text">{{detailData.House}}</p>
+                              </div>
 
-                            <div class="col-12">
-                              <h5 class="detail-text text-muted">Patente</h5> 
-                              <p class="detail-text">{{detailData.Patente}}</p>
-                            </div>                                                                             
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-12">
+                                <h5 class="detail-text text-muted">Patente</h5> 
+                                <p class="detail-text">{{detailData.Patente}}</p>
+                              </div>   
+                            </div>                                                                          
                           </div>  
                           <!-- End Left Inside -->
 
@@ -230,12 +232,12 @@
                           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
 
                             <div class="row justify-content-end">
-                              <div class="col-xs-12 col-sm-12 col-lg-8">
+                              <div class="col-6 col-sm-8 col-md-8 col-lg-8 col-xl-8">
                                 <div class="referencia">
                                   <h5 class="detail-text">Referencia: {{detailData.Referencia}}</h5>                    
                                 </div>
                               </div>
-                              <div class="col-xs-12 col-sm-12 col-lg-4">
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <h5 class="detail-text text-muted">Estatus</h5>
                                 <div class="col status-filter">            
                                   <div class="status-filter__circle status-filter__circle--{{detailData.Estatus | statusPipe }}"></div>
@@ -247,27 +249,27 @@
                             </div>
 
                             <div class="row">
-                              <div class="col-xs-12 col-sm-12 col-lg-8">
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                                 <h5 class="detail-text text-muted">RFC Facturar </h5>
                                 <p class="detail-text">{{detailData.RFCFacturar}}</p>
                               </div>
 
-                              <div class="col-xs-12 col-sm-12 col-lg-4">
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                                 <h5 class="detail-text text-muted">Pedimento</h5>
                                 <p class="detail-text">{{detailData.Pedimento}}</p>
-                              </div>                                                        
-                            </div>
-
-                            <div class="row">                              
-                              <div class="col-xs-12 col-sm-12 col-lg-8">
+                              </div>    
+                              
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                                 <h5 class="detail-text text-muted">Subdivisión</h5>
                                 <p class="detail-text">{{detailData.Subdivision ? 'Sí' : 'No' }}</p>
                               </div>
-                              <div class="col-xs-12 col-sm-12 col-lg-4">
+
+                              <div class="col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                                 <h5 class="detail-text text-muted">Fecha Salida</h5>
                                 <p class="detail-text">{{detailData.FechaSalida}}</p>
                               </div>
-                            </div>                            
+                            </div>
+                            
                           </div>
                           <!-- End Right Inside -->
                           
