--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -18,6 +18,10 @@ img {
   height: 285px;
 }
 
+.example-item {
+  height: 15px;
+}
+
 @media(max-width:450px){
      .grafica {
       display: none;
