--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -172,6 +172,7 @@
                   </mat-form-field>
                 </div>                                       
               </div>
+
               <!--  -->
               
             </form>
@@ -327,7 +328,7 @@
             <div class="detail-text font-weight-bold">Guía House </div>
             <p class="detail-text">{{model.House}}</p>
           </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-3">
             <div class="detail-text font-weight-bold">Referencia</div>
             <p class="detail-text">{{referencia  }}</p>
           </div>
@@ -338,29 +339,29 @@
           <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
             <div class="detail-text font-weight-bold">Peso</div>
             <p class="detail-text">{{model.Peso}}&nbsp;Kg.</p>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-            <div class="detail-text font-weight-bold">Fecha Previo</div>
-            <p class="detail-text">{{model.FechaPrevio?.slice(6,8)}}/{{model.FechaPrevio?.slice(4,6)}}/{{model.FechaPrevio?.slice(0,4)}} {{model.FechaPrevio?.slice(9,14)}}</p>
-          </div>
+          </div>          
         </div><!-- End Row Inside -->
-        
+        <hr class="dividerb">
         <div class="row mt-2">
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <div class="detail-text font-weight-bold">No. Gafete </div>
-            <p class="detail-text">{{model.NumGafete}}</p>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <div class="detail-text font-weight-bold">Patente</div>
             <p class="detail-text">{{model.Patente}}</p>
           </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+            <div class="detail-text font-weight-bold">No. Gafete </div>
+            <p class="detail-text">{{model.NumGafete}}</p>
+          </div>          
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <div class="detail-text font-weight-bold">Nombre tramitador</div>
+            <div class="detail-text font-weight-bold">Tramitador</div>
             <p class="detail-text">{{model.Nombre}}&nbsp;{{model.Paterno}}&nbsp;{{model.Materno}}</p>
           </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <div class="detail-text font-weight-bold">Etiquetado</div>
             <p class="detail-text">{{model.Etiquetado ? 'Sí' : 'No'}}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-3">
+            <div class="detail-text font-weight-bold">Fecha Previo</div>
+            <p class="detail-text">{{model.FechaPrevio?.slice(6,8)}}/{{model.FechaPrevio?.slice(4,6)}}/{{model.FechaPrevio?.slice(0,4)}} {{model.FechaPrevio?.slice(9,14)}}</p>
           </div>
         </div><!-- End Row Inside --> 
         <hr class="dividerb">
